--- a/packages/core/helpers/.eslintrc.json
+++ b/packages/core/helpers/.eslintrc.json
@@ -1,23 +1,15 @@
 {
-  "extends": [
-    "../../../.eslintrc.json"
-  ],
-  "ignorePatterns": [
-    "!**/*"
-  ],
+  "extends": ["../../../.eslintrc.json"],
+  "ignorePatterns": ["!**/*"],
   "overrides": [
     {
-      "files": [
-        "*.ts"
-      ],
+      "files": ["*.ts"],
       "extends": [
         "plugin:@nrwl/nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "parserOptions": {
-        "project": [
-          "packages/core/helpers/tsconfig.*?.json"
-        ]
+        "project": ["packages/core/helpers/tsconfig.*?.json"]
       },
       "rules": {
         "@angular-eslint/component-selector": [
@@ -31,12 +23,8 @@
       }
     },
     {
-      "files": [
-        "*.html"
-      ],
-      "extends": [
-        "plugin:@nrwl/nx/angular-template"
-      ],
+      "files": ["*.html"],
+      "extends": ["plugin:@nrwl/nx/angular-template"],
       "rules": {}
     }
   ]
