--- a/.release-it.json
+++ b/.release-it.json
@@ -29,11 +29,7 @@
       "infile": "CHANGELOG.md"
     },
     "@release-it/bumper": {
-      "out": [
-        "package.json",
-        "package-lock.json",
-        "packages/**/package*.json"
-      ]
+      "out": ["package.json", "package-lock.json", "packages/**/package*.json"]
     }
   },
   "npm": {
@@ -44,5 +40,8 @@
   },
   "github": {
     "releaseNotes": true
+  },
+  "hooks": {
+    "before:init": "npm run affected:lint"
   }
 }
