--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -79,7 +79,8 @@
       ],
       "@angular-three/controls/transform-controls": [
         "packages/controls/transform-controls/src/index.ts"
-      ]
+      ],
+      "@angular-three/popmotion": ["packages/popmotion/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
