--- a/docs/package.json
+++ b/docs/package.json
@@ -17,9 +17,14 @@
     "@docusaurus/core": "2.0.0-alpha.73",
     "@docusaurus/preset-classic": "2.0.0-alpha.73",
     "@mdx-js/react": "1.6.22",
+    "@react-three/drei": "^4.3.1",
+    "@react-three/fiber": "^6.0.16",
+    "@react-three/postprocessing": "^2.0.3",
     "clsx": "1.1.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "simplex-noise": "^2.4.0",
+    "three": "^0.128.0"
   },
   "browserslist": {
     "production": [
