--- a/tools/generators/life-saver/files/with-args/__name@dasherize__.directive.ts.template
+++ b/tools/generators/life-saver/files/with-args/__name@dasherize__.directive.ts.template
@@ -1,6 +1,6 @@
 // GENERATED
 <% if (withThreeObject3d) { %>
-import { <%= abstract %>, ThreeObject3d } from '@angular-three/core';<% } else { %>import { <%= abstract %> } from '@angular-three/core';<% } %>
+import { <%= abstract %>, ThreeObject3d, OBJECT_3D_CONTROLLER_PROVIDER } from '@angular-three/core';<% } else { %>import { <%= abstract %> } from '@angular-three/core';<% } %>
 import { Directive, Input } from '@angular/core';
 import { <%= name %> } from 'three';
 
@@ -11,7 +11,8 @@ import { <%= name %> } from 'three';
     {
       provide: <% if (withThreeObject3d) { %>ThreeObject3d<% } else { %><%= abstract %><% } %>,
       useExisting: <%= name %>Directive,
-    },
+    },<% if (withThreeObject3d) { %>
+    OBJECT_3D_CONTROLLER_PROVIDER,<% } %>
   ],
 })
 export class <%= name %>Directive extends <%= abstract %><<%= name %>> {
