--- a/packages/helpers/.eslintrc.json
+++ b/packages/helpers/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["../../../.eslintrc.json"],
+  "extends": ["../../.eslintrc.json"],
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
@@ -8,8 +8,12 @@
         "plugin:@nrwl/nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
-      "parserOptions": { "project": ["packages/core/canvas/tsconfig.*?.json"] },
+      "parserOptions": { "project": ["packages/helpers/tsconfig.*?.json"] },
       "rules": {
+        "@angular-eslint/directive-selector": [
+          "error",
+          { "type": "attribute", "prefix": "ngt", "style": "camelCase" }
+        ],
         "@angular-eslint/component-selector": [
           "error",
           { "type": "element", "prefix": "ngt", "style": "kebab-case" }
