--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -32,7 +32,6 @@
       "@angular-three/postprocessing/render-pass": [
         "packages/postprocessing/render-pass/src/index.ts"
       ],
-      "@angular-three/core/canvas": ["packages/core/canvas/src/index.ts"],
       "@angular-three/postprocessing/ssao-pass": [
         "packages/postprocessing/ssao-pass/src/index.ts"
       ],
@@ -80,7 +79,8 @@
       "@angular-three/controls/transform-controls": [
         "packages/controls/transform-controls/src/index.ts"
       ],
-      "@angular-three/popmotion": ["packages/popmotion/src/index.ts"]
+      "@angular-three/popmotion": ["packages/popmotion/src/index.ts"],
+      "@angular-three/helpers": ["packages/helpers/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
