--- a/packages/core/cameras/package.json
+++ b/packages/core/cameras/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-three/core/cameras",
-  "version": "0.0.1",
+  "version": "1.0.0-beta.23",
   "peerDependencies": {
     "@angular/common": "^11.2.10",
     "@angular/core": "^11.2.10"
