--- a/docs-site/package.json
+++ b/docs-site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs",
+  "name": "docs-site",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,21 +11,23 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids",
-    "postinstall": "yarn build"
+    "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.73",
-    "@docusaurus/preset-classic": "2.0.0-alpha.73",
-    "@mdx-js/react": "1.6.22",
-    "@react-three/drei": "^4.3.1",
-    "@react-three/fiber": "^6.0.16",
+    "@docusaurus/core": "2.0.0-alpha.75",
+    "@docusaurus/preset-classic": "2.0.0-alpha.75",
+    "@mdx-js/react": "^1.6.21",
+    "@react-three/drei": "^4.3.3",
+    "@react-three/fiber": "^6.0.19",
     "@react-three/postprocessing": "^2.0.3",
-    "clsx": "1.1.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@svgr/webpack": "^5.5.0",
+    "clsx": "^1.1.1",
+    "file-loader": "^6.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "simplex-noise": "^2.4.0",
-    "three": "^0.128.0"
+    "three": "^0.128.0",
+    "url-loader": "^4.1.1"
   },
   "browserslist": {
     "production": [
