--- a/.github/workflows/docusaurus.yml
+++ b/.github/workflows/docusaurus.yml
@@ -14,7 +14,7 @@ jobs:
           fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
       - name: Create local changes and commit
         run: |
-          cd docs
+          cd docs-site
           yarn
           cd build
           git init
