--- a/nx.json
+++ b/nx.json
@@ -1,33 +1,54 @@
 {
   "npmScope": "angular-three",
-  "affected": { "defaultBase": "main" },
+  "affected": {
+    "defaultBase": "main"
+  },
   "implicitDependencies": {
-    "package.json": { "dependencies": "*", "devDependencies": "*" },
+    "package.json": {
+      "dependencies": "*",
+      "devDependencies": "*"
+    },
     ".eslintrc.json": "*"
   },
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
+      "options": {
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
+      }
     }
   },
   "projects": {
-    "core": { "tags": ["scope:core", "type:library"] },
+    "core": {
+      "tags": ["scope:core", "type:library"]
+    },
     "core-materials": {
       "tags": ["scope:core", "type:library", "context:materials"]
     },
     "core-geometries": {
       "tags": ["scope:core", "type:library", "context:geometries"]
     },
-    "core-meshes": { "tags": ["scope:core", "type:library", "context:meshes"] },
-    "core-lights": { "tags": ["scope:core", "type:library", "context:lights"] },
-    "demo": { "tags": [] },
-    "core-stats": { "tags": ["scope:core", "type:library", "context:stats"] },
-    "controls": { "tags": ["scope:controls", "type:library"] },
+    "core-meshes": {
+      "tags": ["scope:core", "type:library", "context:meshes"]
+    },
+    "core-lights": {
+      "tags": ["scope:core", "type:library", "context:lights"]
+    },
+    "demo": {
+      "tags": []
+    },
+    "core-stats": {
+      "tags": ["scope:core", "type:library", "context:stats"]
+    },
+    "controls": {
+      "tags": ["scope:controls", "type:library"]
+    },
     "core-attributes": {
       "tags": ["scope:core", "type:library", "context:attributes"]
     },
-    "postprocessing": { "tags": ["scope:postprocessing", "type:library"] },
+    "postprocessing": {
+      "tags": ["scope:postprocessing", "type:library"]
+    },
     "postprocessing-render-pass": {
       "tags": ["scope:postprocessing", "type:library", "context:render-pass"]
     },
@@ -41,19 +62,33 @@
     "postprocessing-shader-pass": {
       "tags": ["scope:postprocessing", "type:library", "context:shader-pass"]
     },
-    "core-group": { "tags": ["scope:core", "type:library", "context:group"] },
-    "core-scene": { "tags": ["scope:core", "type:library", "context:scene"] },
-    "core-audios": { "tags": ["scope:core", "type:library", "context:audios"] },
+    "core-group": {
+      "tags": ["scope:core", "type:library", "context:group"]
+    },
+    "core-scene": {
+      "tags": ["scope:core", "type:library", "context:scene"]
+    },
+    "core-audios": {
+      "tags": ["scope:core", "type:library", "context:audios"]
+    },
     "core-sprites": {
       "tags": ["scope:core", "type:library", "context:sprites"]
     },
-    "core-lod": { "tags": ["scope:core", "type:library", "context:lod"] },
-    "core-lines": { "tags": ["scope:core", "type:library", "context:lines"] },
-    "core-points": { "tags": ["scope:core", "type:library", "context:points"] },
+    "core-lod": {
+      "tags": ["scope:core", "type:library", "context:lod"]
+    },
+    "core-lines": {
+      "tags": ["scope:core", "type:library", "context:lines"]
+    },
+    "core-points": {
+      "tags": ["scope:core", "type:library", "context:points"]
+    },
     "core-textures": {
       "tags": ["scope:core", "type:library", "context:textures"]
     },
-    "core-curves": { "tags": ["scope:core", "type:library", "context:curves"] },
+    "core-curves": {
+      "tags": ["scope:core", "type:library", "context:curves"]
+    },
     "core-helpers": {
       "tags": ["scope:core", "type:library", "context:helpers"]
     },
@@ -93,8 +128,12 @@
     "controls-transform-controls": {
       "tags": ["scope:controls", "type:library", "context:transform-controls"]
     },
-    "popmotion": { "tags": ["scope:popmotion", "type:library"] },
-    "helpers": { "tags": ["scope:helpers", "type:library"] },
+    "popmotion": {
+      "tags": ["scope:popmotion", "type:library"]
+    },
+    "helpers": {
+      "tags": ["scope:helpers", "type:library"]
+    },
     "core-cameras": {
       "tags": ["scope:core", "type:library", "context:cameras"]
     },
@@ -192,5 +231,8 @@
       "tags": ["scope:helpers", "type:library", "context:core"]
     }
   },
-  "workspaceLayout": { "appsDir": "packages", "libsDir": "packages" }
+  "workspaceLayout": {
+    "appsDir": "packages",
+    "libsDir": "packages"
+  }
 }
