--- a/package.json
+++ b/package.json
@@ -39,39 +39,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.12",
-    "@angular/common": "11.2.12",
-    "@angular/compiler": "11.2.12",
-    "@angular/core": "11.2.12",
-    "@angular/forms": "11.2.12",
-    "@angular/platform-browser": "11.2.12",
-    "@angular/platform-browser-dynamic": "11.2.12",
-    "@angular/router": "11.2.12",
-    "@ngrx/component-store": "11.1.0",
+    "@angular/animations": "12.0.0",
+    "@angular/common": "12.0.0",
+    "@angular/compiler": "12.0.0",
+    "@angular/core": "12.0.0",
+    "@angular/forms": "12.0.0",
+    "@angular/platform-browser": "12.0.0",
+    "@angular/platform-browser-dynamic": "12.0.0",
+    "@angular/router": "12.0.0",
+    "@ngrx/component-store": "12.0.0",
     "nice-color-palettes": "3.0.0",
     "popmotion": "~9.3.5",
     "rxjs": "6.6.7",
     "three": "0.128.0",
     "tslib": "2.2.0",
-    "zone.js": "0.11.4"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.11",
+    "@angular-devkit/build-angular": "12.0.0",
     "@angular-devkit/schematics": "11.2.11",
-    "@angular-eslint/eslint-plugin": "4.2.0",
-    "@angular-eslint/eslint-plugin-template": "4.2.0",
-    "@angular-eslint/template-parser": "4.2.0",
-    "@angular/cli": "11.2.11",
-    "@angular/compiler-cli": "11.2.12",
-    "@angular/language-service": "11.2.12",
-    "@nrwl/angular": "12.1.0",
-    "@nrwl/cli": "12.1.0",
-    "@nrwl/devkit": "12.1.0",
-    "@nrwl/eslint-plugin-nx": "12.1.0",
-    "@nrwl/jest": "12.1.0",
-    "@nrwl/linter": "12.1.0",
-    "@nrwl/tao": "12.1.0",
-    "@nrwl/workspace": "12.1.0",
+    "@angular-eslint/eslint-plugin": "12.0.0",
+    "@angular-eslint/eslint-plugin-template": "12.0.0",
+    "@angular-eslint/template-parser": "12.0.0",
+    "@angular/cli": "12.0.0",
+    "@angular/compiler-cli": "12.0.0",
+    "@angular/language-service": "12.0.0",
+    "@nrwl/angular": "12.3.1",
+    "@nrwl/cli": "12.3.1",
+    "@nrwl/devkit": "12.3.1",
+    "@nrwl/eslint-plugin-nx": "12.3.1",
+    "@nrwl/jest": "12.3.1",
+    "@nrwl/linter": "12.3.1",
+    "@nrwl/tao": "12.3.1",
+    "@nrwl/workspace": "12.3.1",
     "@release-it/bumper": "2.0.0",
     "@release-it/conventional-changelog": "2.0.1",
     "@types/jest": "26.0.23",
@@ -87,13 +87,13 @@
     "jest": "26.6.3",
     "jest-preset-angular": "8.4.0",
     "lint-staged": "10.5.4",
-    "ng-packagr": "11.2.4",
+    "ng-packagr": "12.0.0",
     "prettier": "2.2.1",
     "release-it": "14.6.1",
     "simple-git-hooks": "2.4.1",
     "ts-jest": "26.5.5",
     "ts-node": "9.1.1",
-    "typescript": "4.1.5"
+    "typescript": "4.2.4"
   },
   "config": {
     "commitizen": {
