--- a/packages/core/.eslintrc.json
+++ b/packages/core/.eslintrc.json
@@ -8,7 +8,9 @@
         "plugin:@nrwl/nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
-      "parserOptions": { "project": ["packages/core/tsconfig.*?.json"] },
+      "parserOptions": {
+        "project": ["packages/core/tsconfig.*?.json"]
+      },
       "rules": {
         "@angular-eslint/no-output-native": 0,
         "@typescript-eslint/ban-types": 0,
@@ -16,7 +18,11 @@
         "@typescript-eslint/no-explicit-any": 0,
         "@angular-eslint/component-selector": [
           "error",
-          { "type": "element", "prefix": "three", "style": "kebab-case" }
+          {
+            "type": "element",
+            "prefix": "three",
+            "style": "kebab-case"
+          }
         ]
       }
     },
