--- a/packages/core/group/.eslintrc.json
+++ b/packages/core/group/.eslintrc.json
@@ -8,11 +8,17 @@
         "plugin:@nrwl/nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
-      "parserOptions": { "project": ["packages/core/group/tsconfig.*?.json"] },
+      "parserOptions": {
+        "project": ["packages/core/group/tsconfig.*?.json"]
+      },
       "rules": {
         "@angular-eslint/component-selector": [
           "error",
-          { "type": "element", "prefix": "ngt", "style": "kebab-case" }
+          {
+            "type": "element",
+            "prefix": "ngt",
+            "style": "kebab-case"
+          }
         ]
       }
     },
