--- a/packages/helpers/.eslintrc.json
+++ b/packages/helpers/.eslintrc.json
@@ -8,15 +8,25 @@
         "plugin:@nrwl/nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
-      "parserOptions": { "project": ["packages/helpers/tsconfig.*?.json"] },
+      "parserOptions": {
+        "project": ["packages/helpers/tsconfig.*?.json"]
+      },
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
-          { "type": "attribute", "prefix": "ngt", "style": "camelCase" }
+          {
+            "type": "attribute",
+            "prefix": "ngt",
+            "style": "camelCase"
+          }
         ],
         "@angular-eslint/component-selector": [
           "error",
-          { "type": "element", "prefix": "ngt", "style": "kebab-case" }
+          {
+            "type": "element",
+            "prefix": "ngt",
+            "style": "kebab-case"
+          }
         ]
       }
     },
