--- a/packages/helpers/core/package.json
+++ b/packages/helpers/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-three/helpers/core",
-  "version": "0.0.1",
+  "version": "1.0.0-beta.29",
   "peerDependencies": {
     "@angular/common": "^11.2.12",
     "@angular/core": "^11.2.12"
