--- a/.release-it.json
+++ b/.release-it.json
@@ -33,7 +33,8 @@
     }
   },
   "npm": {
-    "publish": false
+    "publish": false,
+    "allowSameVersion": true
   },
   "git": {
     "commitMessage": "Prepare release ${version}"
