chore: update release it

--- a/.release-it.json
+++ b/.release-it.json
@@ -34,7 +34,7 @@
   },
   "npm": {
     "publish": false,
-    "allowSameVersion": true
+    "ignoreVersion": true
   },
   "git": {
     "commitMessage": "Prepare release ${version}"
