--- a/.release-it.json
+++ b/.release-it.json
@@ -29,7 +29,15 @@
       "infile": "CHANGELOG.md"
     },
     "@release-it/bumper": {
-      "out": ["package.json", "package-lock.json", "packages/**/package*.json"]
+      "out": [
+        "package.json",
+        "package-lock.json",
+        "packages/controls/package*.json",
+        "packages/core/package*.json",
+        "packages/helpers/package*.json",
+        "packages/popmotion/package*.json",
+        "packages/postprocessing/package*.json"
+      ]
     }
   },
   "npm": {
