--- a/packages/postprocessing/afterimage-pass/package.json
+++ b/packages/postprocessing/afterimage-pass/package.json
@@ -2,8 +2,8 @@
   "name": "@angular-three/postprocessing/afterimage-pass",
   "version": "1.0.0-beta.32",
   "peerDependencies": {
-    "@angular/common": "^11.2.10",
-    "@angular/core": "^11.2.10"
+    "@angular/common": "~12.0.4",
+    "@angular/core": "~12.0.4"
   },
   "dependencies": {
     "tslib": "^2.0.0"
