ci: adjust release it

--- a/.release-it.json
+++ b/.release-it.json
@@ -47,10 +47,9 @@
     "before:init": [
       "npm run affected:lint"
     ],
-    "after:bump": [
+    "before:bump": [
       "npm run format:write",
-      "git add .",
-      "git commit --amend --no-edit"
+      "git add ."
     ]
   }
 }
