--- a/packages/postprocessing/adaptive-tone-mapping-pass/.eslintrc.json
+++ b/packages/postprocessing/adaptive-tone-mapping-pass/.eslintrc.json
@@ -8,6 +8,11 @@
         "plugin:@nrwl/nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
+      "parserOptions": {
+        "project": [
+          "packages/postprocessing/adaptive-tone-mapping-pass/tsconfig.*?.json"
+        ]
+      },
       "rules": {
         "@angular-eslint/component-selector": [
           "error",
