--- a/packages/postprocessing/ssrpass/.eslintrc.json
+++ b/packages/postprocessing/ssrpass/.eslintrc.json
@@ -8,6 +8,9 @@
         "plugin:@nrwl/nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
+      "parserOptions": {
+        "project": ["packages/postprocessing/ssrpass/tsconfig.*?.json"]
+      },
       "rules": {
         "@angular-eslint/component-selector": [
           "error",
