refactor: per-project configuration

--- a/nx.json
+++ b/nx.json
@@ -18,219 +18,7 @@
       }
     }
   },
-  "projects": {
-    "controls": {
-      "tags": ["scope:controls", "type:library"]
-    },
-    "controls-device-orientation-controls": {
-      "tags": [
-        "scope:controls",
-        "type:library",
-        "context:device-orientation-controls"
-      ]
-    },
-    "controls-drag-controls": {
-      "tags": ["scope:controls", "type:library", "context:drag-controls"]
-    },
-    "controls-first-person-controls": {
-      "tags": [
-        "scope:controls",
-        "type:library",
-        "context:first-person-controls"
-      ]
-    },
-    "controls-fly-controls": {
-      "tags": ["scope:controls", "type:library", "context:fly-controls"]
-    },
-    "controls-orbit-controls": {
-      "tags": ["scope:controls", "type:library", "context:orbit-controls"]
-    },
-    "controls-pointer-lock-controls": {
-      "tags": [
-        "scope:controls",
-        "type:library",
-        "context:pointer-lock-controls"
-      ]
-    },
-    "controls-trackball-controls": {
-      "tags": ["scope:controls", "type:library", "context:trackball-controls"]
-    },
-    "controls-transform-controls": {
-      "tags": ["scope:controls", "type:library", "context:transform-controls"]
-    },
-    "core": {
-      "tags": ["scope:core", "type:library"]
-    },
-    "core-attributes": {
-      "tags": ["scope:core", "type:library", "context:attributes"]
-    },
-    "core-audios": {
-      "tags": ["scope:core", "type:library", "context:audios"]
-    },
-    "core-cameras": {
-      "tags": ["scope:core", "type:library", "context:cameras"]
-    },
-    "core-curves": {
-      "tags": ["scope:core", "type:library", "context:curves"]
-    },
-    "core-geometries": {
-      "tags": ["scope:core", "type:library", "context:geometries"]
-    },
-    "core-group": {
-      "tags": ["scope:core", "type:library", "context:group"]
-    },
-    "core-helpers": {
-      "tags": ["scope:core", "type:library", "context:helpers"]
-    },
-    "core-lights": {
-      "tags": ["scope:core", "type:library", "context:lights"]
-    },
-    "core-lines": {
-      "tags": ["scope:core", "type:library", "context:lines"]
-    },
-    "core-lod": {
-      "tags": ["scope:core", "type:library", "context:lod"]
-    },
-    "core-materials": {
-      "tags": ["scope:core", "type:library", "context:materials"]
-    },
-    "core-meshes": {
-      "tags": ["scope:core", "type:library", "context:meshes"]
-    },
-    "core-points": {
-      "tags": ["scope:core", "type:library", "context:points"]
-    },
-    "core-scene": {
-      "tags": ["scope:core", "type:library", "context:scene"]
-    },
-    "core-sprites": {
-      "tags": ["scope:core", "type:library", "context:sprites"]
-    },
-    "core-stats": {
-      "tags": ["scope:core", "type:library", "context:stats"]
-    },
-    "core-textures": {
-      "tags": ["scope:core", "type:library", "context:textures"]
-    },
-    "demo": {
-      "tags": []
-    },
-    "helpers": {
-      "tags": ["scope:helpers", "type:library"]
-    },
-    "helpers-core": {
-      "tags": ["scope:helpers", "type:library", "context:core"]
-    },
-    "popmotion": {
-      "tags": ["scope:popmotion", "type:library"]
-    },
-    "postprocessing": {
-      "tags": ["scope:postprocessing", "type:library"]
-    },
-    "postprocessing-adaptive-tone-mapping-pass": {
-      "tags": [
-        "scope:postprocessing",
-        "type:library",
-        "context:adaptive-tone-mapping-pass"
-      ]
-    },
-    "postprocessing-afterimage-pass": {
-      "tags": [
-        "scope:postprocessing",
-        "type:library",
-        "context:afterimage-pass"
-      ]
-    },
-    "postprocessing-bloom-pass": {
-      "tags": ["scope:postprocessing", "type:library", "context:bloom-pass"]
-    },
-    "postprocessing-bokeh-pass": {
-      "tags": ["scope:postprocessing", "type:library", "context:bokeh-pass"]
-    },
-    "postprocessing-clear-pass": {
-      "tags": ["scope:postprocessing", "type:library", "context:clear-pass"]
-    },
-    "postprocessing-cube-texture-pass": {
-      "tags": [
-        "scope:postprocessing",
-        "type:library",
-        "context:cube-texture-pass"
-      ]
-    },
-    "postprocessing-dot-screen-pass": {
-      "tags": [
-        "scope:postprocessing",
-        "type:library",
-        "context:dot-screen-pass"
-      ]
-    },
-    "postprocessing-film-pass": {
-      "tags": ["scope:postprocessing", "type:library", "context:film-pass"]
-    },
-    "postprocessing-glitch-pass": {
-      "tags": ["scope:postprocessing", "type:library", "context:glitch-pass"]
-    },
-    "postprocessing-halftone-pass": {
-      "tags": ["scope:postprocessing", "type:library", "context:halftone-pass"]
-    },
-    "postprocessing-lutpass": {
-      "tags": ["scope:postprocessing", "type:library", "context:lut-pass"]
-    },
-    "postprocessing-mask-pass": {
-      "tags": ["scope:postprocessing", "type:library", "context:mask-pass"]
-    },
-    "postprocessing-outline-pass": {
-      "tags": ["scope:postprocessing", "type:library", "context:outline-pass"]
-    },
-    "postprocessing-render-pass": {
-      "tags": ["scope:postprocessing", "type:library", "context:render-pass"]
-    },
-    "postprocessing-saopass": {
-      "tags": ["scope:postprocessing", "type:library", "context:sao-pass"]
-    },
-    "postprocessing-save-pass": {
-      "tags": ["scope:postprocessing", "type:library", "context:save-pass"]
-    },
-    "postprocessing-shader-pass": {
-      "tags": ["scope:postprocessing", "type:library", "context:shader-pass"]
-    },
-    "postprocessing-smaapass": {
-      "tags": ["scope:postprocessing", "type:library", "context:smaa-pass"]
-    },
-    "postprocessing-ssaarender-pass": {
-      "tags": [
-        "scope:postprocessing",
-        "type:library",
-        "context:ssaa-render-pass"
-      ]
-    },
-    "postprocessing-ssaopass": {
-      "tags": ["scope:postprocessing", "type:library", "context:ssao-pass"]
-    },
-    "postprocessing-ssrpass": {
-      "tags": ["scope:postprocessing", "type:library", "context:ssr-pass"]
-    },
-    "postprocessing-ssrr-pass": {
-      "tags": ["scope:postprocessing", "type:library", "context:ssrr-pass"]
-    },
-    "postprocessing-taarender-pass": {
-      "tags": [
-        "scope:postprocessing",
-        "type:library",
-        "context:taa-render-pass"
-      ]
-    },
-    "postprocessing-texture-pass": {
-      "tags": ["scope:postprocessing", "type:library", "context:texture-pass"]
-    },
-    "postprocessing-unreal-bloom-pass": {
-      "tags": [
-        "scope:postprocessing",
-        "type:library",
-        "context:unreal-bloom-pass"
-      ]
-    }
-  },
+  "projects": {},
   "workspaceLayout": {
     "appsDir": "packages",
     "libsDir": "packages"
