--- a/package.json
+++ b/package.json
@@ -39,46 +39,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.1.1",
-    "@angular/common": "12.1.1",
-    "@angular/compiler": "12.1.1",
-    "@angular/core": "12.1.1",
-    "@angular/forms": "12.1.1",
-    "@angular/platform-browser": "12.1.1",
-    "@angular/platform-browser-dynamic": "12.1.1",
-    "@angular/router": "12.1.1",
+    "@angular/animations": "12.1.4",
+    "@angular/common": "12.1.4",
+    "@angular/compiler": "12.1.4",
+    "@angular/core": "12.1.4",
+    "@angular/forms": "12.1.4",
+    "@angular/platform-browser": "12.1.4",
+    "@angular/platform-browser-dynamic": "12.1.4",
+    "@angular/router": "12.1.4",
     "@ngrx/component-store": "12.2.0",
     "nice-color-palettes": "3.0.0",
     "popmotion": "~9.4.0",
     "rxjs": "7.1.0",
     "three": "0.129.0",
     "tslib": "2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.1.1",
+    "@angular-devkit/build-angular": "12.1.4",
     "@angular-devkit/schematics": "12.1.1",
-    "@angular-eslint/eslint-plugin": "12.2.0",
-    "@angular-eslint/eslint-plugin-template": "12.2.0",
-    "@angular-eslint/template-parser": "12.2.0",
-    "@angular/cli": "12.1.1",
-    "@angular/compiler-cli": "12.1.1",
-    "@angular/language-service": "12.1.1",
-    "@nrwl/angular": "12.5.4",
-    "@nrwl/cli": "12.5.4",
-    "@nrwl/devkit": "12.5.4",
-    "@nrwl/eslint-plugin-nx": "12.5.4",
-    "@nrwl/jest": "12.5.4",
-    "@nrwl/linter": "12.5.4",
-    "@nrwl/tao": "12.5.4",
-    "@nrwl/workspace": "12.5.4",
+    "@angular-eslint/eslint-plugin": "12.3.1",
+    "@angular-eslint/eslint-plugin-template": "12.3.1",
+    "@angular-eslint/template-parser": "12.3.1",
+    "@angular/cli": "12.1.4",
+    "@angular/compiler-cli": "12.1.4",
+    "@angular/language-service": "12.1.4",
+    "@nrwl/angular": "12.6.3",
+    "@nrwl/cli": "12.6.3",
+    "@nrwl/devkit": "12.6.3",
+    "@nrwl/eslint-plugin-nx": "12.6.3",
+    "@nrwl/jest": "12.6.3",
+    "@nrwl/linter": "12.6.3",
+    "@nrwl/tao": "12.6.3",
+    "@nrwl/workspace": "12.6.3",
     "@release-it/bumper": "2.0.0",
     "@release-it/conventional-changelog": "3.0.1",
     "@types/jest": "26.0.23",
     "@types/node": "14.14.41",
     "@types/three": "0.129.2",
-    "@typescript-eslint/eslint-plugin": "4.28.1",
-    "@typescript-eslint/parser": "4.28.1",
+    "@typescript-eslint/eslint-plugin": "4.28.5",
+    "@typescript-eslint/parser": "4.28.5",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "10.0.0",
@@ -86,7 +86,7 @@
     "eslint-config-prettier": "8.3.0",
     "jest": "27.0.6",
     "jest-preset-angular": "9.0.4",
-    "ng-packagr": "12.1.0",
+    "ng-packagr": "12.1.2",
     "prettier": "2.3.2",
     "release-it": "14.10.0",
     "ts-jest": "27.0.3",
