--- a/package.json
+++ b/package.json
@@ -47,17 +47,17 @@
     "@angular/platform-browser": "12.1.4",
     "@angular/platform-browser-dynamic": "12.1.4",
     "@angular/router": "12.1.4",
-    "@ngrx/component-store": "12.2.0",
+    "@ngrx/component-store": "12.3.0",
     "nice-color-palettes": "3.0.0",
     "popmotion": "~9.4.0",
-    "rxjs": "7.1.0",
-    "three": "0.129.0",
+    "rxjs": "7.3.0",
+    "three": "0.131.2",
     "tslib": "2.3.0",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "12.1.4",
-    "@angular-devkit/schematics": "12.1.1",
+    "@angular-devkit/schematics": "12.1.4",
     "@angular-eslint/eslint-plugin": "12.3.1",
     "@angular-eslint/eslint-plugin-template": "12.3.1",
     "@angular-eslint/template-parser": "12.3.1",
@@ -72,26 +72,27 @@
     "@nrwl/linter": "12.6.3",
     "@nrwl/tao": "12.6.3",
     "@nrwl/workspace": "12.6.3",
-    "@release-it/bumper": "2.0.0",
+    "@release-it/bumper": "3.0.1",
     "@release-it/conventional-changelog": "3.0.1",
-    "@types/jest": "26.0.23",
+    "@types/jest": "26.0.24",
     "@types/node": "14.14.41",
-    "@types/three": "0.129.2",
-    "@typescript-eslint/eslint-plugin": "4.28.5",
-    "@typescript-eslint/parser": "4.28.5",
+    "@types/three": "0.130.1",
+    "@typescript-eslint/eslint-plugin": "4.29.0",
+    "@typescript-eslint/parser": "4.29.0",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "10.0.0",
-    "eslint": "7.30.0",
+    "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "jest": "27.0.6",
-    "jest-preset-angular": "9.0.4",
+    "jest-preset-angular": "9.0.5",
     "ng-packagr": "12.1.2",
     "prettier": "2.3.2",
-    "release-it": "14.10.0",
-    "ts-jest": "27.0.3",
-    "ts-node": "10.0.0",
-    "typescript": "4.3.5"
+    "release-it": "14.10.1",
+    "ts-jest": "27.0.4",
+    "ts-node": "10.1.0",
+    "typescript": "4.3.5",
+    "webpack": "^5.48.0"
   },
   "config": {
     "commitizen": {
