--- a/packages/demo/project.json
+++ b/packages/demo/project.json
@@ -76,7 +76,8 @@
           "packages/demo/src/**/*.ts",
           "packages/demo/src/**/*.html"
         ]
-      }
+      },
+      "outputs": ["{options.outputFile}"]
     },
     "deploy": {
       "executor": "angular-cli-ghpages:deploy",
