--- a/packages/helpers/project.json
+++ b/packages/helpers/project.json
@@ -24,7 +24,8 @@
           "packages/helpers/src/**/*.ts",
           "packages/helpers/src/**/*.html"
         ]
-      }
+      },
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nrwl/jest:jest",
