--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -23,7 +23,8 @@
           "packages/core/src/**/*.ts",
           "packages/core/src/**/*.html"
         ]
-      }
+      },
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nrwl/jest:jest",
