--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,10 +20,10 @@
     "nx"
   ],
   "peerDependencies": {
-    "@angular/common": "~12.0.4",
-    "@angular/core": "~12.0.4",
-    "@ngrx/component-store": "~12.1.0",
-    "three": "~0.129.0"
+    "@angular/common": "^12.0.4",
+    "@angular/core": "^12.0.4",
+    "@ngrx/component-store": "^12.0.0",
+    "three": "~0.133.1"
   },
   "dependencies": {
     "tslib": "^2.0.0"
