--- a/packages/postprocessing/package.json
+++ b/packages/postprocessing/package.json
@@ -20,7 +20,7 @@
     "nx"
   ],
   "peerDependencies": {
-    "@angular/common": "~12.0.4",
+    "@angular/common": "^12.0.4",
     "@angular/core": "~12.0.4"
   },
   "dependencies": {
