--- a/packages/postprocessing/save-pass/package.json
+++ b/packages/postprocessing/save-pass/package.json
@@ -2,7 +2,7 @@
   "name": "@angular-three/postprocessing/save-pass",
   "version": "1.0.0-beta.44",
   "peerDependencies": {
-    "@angular/common": "~12.0.4",
+    "@angular/common": "^12.0.4",
     "@angular/core": "~12.0.4"
   },
   "dependencies": {
