--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.0",
-    "@angular/common": "^12.2.0",
-    "@angular/compiler": "^12.2.0",
-    "@angular/core": "^12.2.0",
-    "@angular/forms": "^12.2.0",
-    "@angular/platform-browser": "^12.2.0",
-    "@angular/platform-browser-dynamic": "^12.2.0",
-    "@angular/router": "^12.2.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "@angular/animations": "12.2.13",
+    "@angular/common": "12.2.13",
+    "@angular/compiler": "12.2.13",
+    "@angular/core": "12.2.13",
+    "@angular/forms": "12.2.13",
+    "@angular/platform-browser": "12.2.13",
+    "@angular/platform-browser-dynamic": "12.2.13",
+    "@angular/router": "12.2.13",
+    "rxjs": "~7.4.0",
+    "tslib": "2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.0",
-    "@angular-eslint/eslint-plugin": "~12.3.0",
-    "@angular-eslint/eslint-plugin-template": "~12.3.0",
-    "@angular-eslint/template-parser": "~12.3.0",
-    "@angular/compiler-cli": "^12.2.0",
-    "@angular/language-service": "^12.2.0",
+    "@angular-devkit/build-angular": "~12.2.13",
+    "@angular-eslint/eslint-plugin": "~12.6.1",
+    "@angular-eslint/eslint-plugin-template": "~12.6.1",
+    "@angular-eslint/template-parser": "~12.6.1",
+    "@angular/compiler-cli": "12.2.13",
+    "@angular/language-service": "12.2.13",
     "@nrwl/angular": "13.1.4",
     "@nrwl/cli": "13.1.4",
     "@nrwl/eslint-plugin-nx": "13.1.4",
@@ -34,20 +34,20 @@
     "@nrwl/tao": "13.1.4",
     "@nrwl/workspace": "13.1.4",
     "@types/jest": "27.0.2",
-    "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "~4.33.0",
-    "@typescript-eslint/parser": "~4.33.0",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "~5.3.1",
+    "@typescript-eslint/parser": "~5.3.1",
     "eslint": "7.32.0",
-    "eslint-config-prettier": "8.1.0",
-    "jest": "27.2.3",
-    "jest-preset-angular": "10.0.1",
-    "ng-packagr": "^12.1.1",
-    "postcss": "^8.3.9",
-    "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-url": "^10.1.1",
-    "prettier": "^2.3.1",
-    "ts-jest": "27.0.5",
+    "eslint-config-prettier": "8.3.0",
+    "jest": "27.3.1",
+    "jest-preset-angular": "10.1.0",
+    "ng-packagr": "12.2.5",
+    "postcss": "8.3.11",
+    "postcss-import": "14.0.2",
+    "postcss-preset-env": "6.7.0",
+    "postcss-url": "10.1.3",
+    "prettier": "2.4.1",
+    "ts-jest": "27.0.7",
     "typescript": "~4.3.5"
   }
 }
