--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/router": "12.2.13",
     "@ngrx/component-store": "12.5.1",
     "rxjs": "~7.4.0",
+    "three": "0.134.0",
     "tslib": "2.3.1",
     "zone.js": "~0.11.4"
   },
@@ -36,6 +37,7 @@
     "@nrwl/workspace": "13.1.4",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
+    "@types/three": "0.134.0",
     "@typescript-eslint/eslint-plugin": "~5.3.1",
     "@typescript-eslint/parser": "~5.3.1",
     "eslint": "7.32.0",
