--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^12.2.0",
-    "@angular/core": "^12.2.0"
+    "@angular/core": "^12.2.0",
+    "@ngrx/component-store": "^12.5.1",
+    "three": "0.134.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
