feat(core): add Scene

--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -33,7 +33,9 @@
       "options": {
         "lintFilePatterns": [
           "packages/core/src/**/*.ts",
-          "packages/core/src/**/*.html"
+          "packages/core/src/**/*.html",
+          "packages/core/scene/**/*.ts",
+          "packages/core/scene/**/*.html"
         ]
       }
     }
