--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@angular-three/core": ["packages/core/src/index.ts"]
+      "@angular-three/core": ["packages/core/src/index.ts"],
+      "@angular-three/core/scene": ["packages/core/scene/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
